<resources>
    <string name="app_name">Arora Calendar</string>
    <string name="title_activity_add_calendar">AddCalendarActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="enter_todo_hint">Enter a task description</string>
    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="due_date_text">Due Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_wknd">This Weekend</string>
    <string name="next_week">Next Week</string>
    <string name="radio_high">High</string>
    <string name="radio_med">Medium</string>
    <string name="radio_low">Low</string>
    <string name="image_description">button image</string>
    <string name="add_todos">Add a Todo…</string>
    <string name="category_edit_text_hint">Add a new category…</string>
    <string name="new_category_button">Enter</string>
    <string name="delete_confirm_header">Do you want to permanently delete this task?</string>
    <string name="delete_button_text">Delete</string>
    <string name="back_button_from_delete_dialog">Go Back</string>
    <string name="delete_cat_button_string">Delete Empty Category</string>
    <string name="empty_cat_placeholder_text">You have finished all the tasks in this category</string>
    <string name="delete_cat_text">Do you want to delete this category?</string>
    <string name="save_task_image_button_descrip">Save Task</string>
    <string name="category_image_button_descrip">Categories</string>
    <string name="placeholder">Placeholder</string>
    <string name="action_settings">About</string>
    <string name="placeholder_image">placeholder_image</string>


    <string-array name="categories">
        <item>To Do List</item>
        <item>Completed</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_background_image">Change Background Image</string>
    <string name="calendar">Calendar</string>
    <string name="rotate_background_image">Rotate Background Image</string>
    <string name="string_rotate_background_image">Rotate Background Image</string>
    <string name="background_image_content_desc">background image</string>
    <string name="textview">TextView</string>
    <string name="prev_button">previous button</string>
    <string name="next_month_button">Next Button</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="button">Button</string>
    <string name="color_icon">color icon</string>
    <string name="photo_icon">photo icon</string>
    <string name="add_photo">Add Photo</string>
    <string name="image">image</string>
    <string name="_256">256</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="preview">Preview</string>
    <string name="invert_text">Invert Text</string>
    <string name="rotate">Rotate</string>
    <string name="color_preview">color preview</string>
    <string name="calendar_day_background_image_string">calendar grid background</string>
    <string name="_99">99</string>
    <string name="long_note_sample">This is a long note about stuff that is for testing the length of the note and stuff. is long enough? I am not sure. But we will truncate it.</string>
    <string name="notif_one">first notification</string>
    <string name="notif_two">Second Notification</string>
    <string name="notif_three">Third Notification</string>

</resources>