<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constraint_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/background_imageview_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_image_content_desc"
        android:scaleType="centerCrop"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="@+id/calendar_grid_recyclerview"
        ads:srcCompat="@drawable/image_one" />

    <ImageButton
        android:id="@+id/prev_month_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/prev_button"
        android:minHeight="48dp"
        android:src="@drawable/ic_chevron_left"
        android:text="@string/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/next_month_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/next_month_button"
        android:minHeight="48dp"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

    <Spinner
        android:id="@+id/month_title_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="60sp"
        android:textStyle="bold"
        ads:layout_constraintBottom_toBottomOf="@+id/next_month_button"
        ads:layout_constraintTop_toTopOf="@+id/next_month_button"
        app:layout_constraintEnd_toStartOf="@+id/next_month_button"
        app:layout_constraintStart_toEndOf="@+id/prev_month_button"
        tools:ignore="SpeakableTextPresentCheck" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="100dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/month_title_spinner" />

    <TextView
        android:id="@+id/sunday_title_textview"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/sun"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toStartOf="@+id/monday_title_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/monday_title_textview"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/mon"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toStartOf="@+id/tuesday_title_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sunday_title_textview" />

    <TextView
        android:id="@+id/tuesday_title_textview"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/tue"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toStartOf="@+id/wednesday_title_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/monday_title_textview" />

    <TextView
        android:id="@+id/wednesday_title_textview"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/wed"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toStartOf="@+id/thursday_title_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tuesday_title_textview" />

    <TextView
        android:id="@+id/thursday_title_textview"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/thu"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toStartOf="@+id/friday_title_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wednesday_title_textview" />

    <TextView
        android:id="@+id/friday_title_textview"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/fri"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toStartOf="@+id/saturday_title_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/thursday_title_textview" />

    <TextView
        android:id="@+id/saturday_title_textview"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/sat"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/friday_title_textview" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_grid_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8090508994671525/3579153363"
        ads:layout_constraintTop_toBottomOf="@+id/calendar_grid_recyclerview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/background_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/change_background_image"
        android:visibility="gone"
        ads:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintTop_toBottomOf="@+id/calendar_grid_recyclerview" />

    <Button
        android:id="@+id/today_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/today"
        android:visibility="gone"
        ads:layout_constraintBottom_toTopOf="@+id/adView"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toEndOf="@+id/background_photo_button"
        ads:layout_constraintTop_toBottomOf="@+id/calendar_grid_recyclerview" />

    <ProgressBar
        android:id="@+id/progressBar_main"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>